temp/objects/RevRecProductRule__c.object
<CustomObject>
    <fields>
        <fullName>AM_Manual_Cal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amortized Milestone Manual Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Miles_Cal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM Miles Manual Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amortize_By__c</fullName>
        <label>Amortize By-Delete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>qty</fullName>
                    <default>true</default>
                    <label>qty</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Divide_By__c</fullName>
        <label>Divide By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Divided evenly between the start and end dates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enable_Manual_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Manual Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_Text__c</fullName>
        <label>End Date Text</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Percentage__c</fullName>
        <label>End Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Forecast_With_Zero_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast With Zero Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InitialComments__c</fullName>
        <label>Comments on Initial</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Amount_Type__c</fullName>
        <label>Initial Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Amount__c</fullName>
        <label>Initial Amount:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Default_Overriden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Overriden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Manual_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manual Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opportuunity_Date_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Opportuunity Date Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opportuunity_End_Date_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Opportuunity End Date Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Split_Categories__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Split Categories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Man_Ini_To_Zero__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Initialization To Zero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Type__c</fullName>
        <label>RevenueType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>amount</fullName>
                </value>
                <value>
                    <fullName>qty</fullName>
                </value>
                <value>
                    <fullName>percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OffsetComments__c</fullName>
        <label>Comments on Offset</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offset_Period__c</fullName>
        <label>Offset Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offset_Type__c</fullName>
        <label>Offset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_or_Exact_Days__c</fullName>
        <label>Period or Exact Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Period</fullName>
                </value>
                <value>
                    <fullName>By Exact Days</fullName>
                </value>
                <value>
                    <fullName>By Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Rule_Type__c</fullName>
        <label>Prior Rule Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_Amount__c</fullName>
        <label>Projected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Percent__c</fullName>
        <label>Projected Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Qty__c</fullName>
        <label>Projected Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recognition_Type__c</fullName>
        <label>Recognition Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResidualComments__c</fullName>
        <label>Comments on Residual</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Residual_Amount_Type__c</fullName>
        <label>Residual Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residual_Amount__c</fullName>
        <label>Residual Amount:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevRecOpportunityLineItem__c</fullName>
        <label>RevRecOpportunityLineItem</label>
        <referenceTo>RevRecOpportunityLineItem__c</referenceTo>
        <relationshipLabel>RevRecProductRules</relationshipLabel>
        <relationshipName>RevRecProductRules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_End_Date__c</fullName>
        <label>Revenue Recognition End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Start_Date__c</fullName>
        <label>Revenue Recognition Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Text__c</fullName>
        <label>Start Date Text</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Percentage__c</fullName>
        <label>Start Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Period__c</fullName>
        <label>Total Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RevRecProductRule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RevRecProductRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecProductRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>